RESOLVED FIXED241579
error: field ‘m_preloadResponse’ has incomplete type ‘WebCore::ResourceResponse’
https://bugs.webkit.org/show_bug.cgi?id=241579
Summary error: field ‘m_preloadResponse’ has incomplete type ‘WebCore::ResourceResponse’
Yury Semikhatsky
Reported 2022-06-13 16:46:14 PDT
FAILED: Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-19.cpp.o /usr/bin/ccache /usr/bin/c++ -DBUILDING_WITH_CMAKE=1 -DBUILDING_WPE__=1 -DBUILDING_WebKit -DBWRAP_EXECUTABLE=\"/usr/bin/bwrap\" -DDATADIR=\"/usr/local/share\" -DDBUS_PROXY_EXECUTABLE=\"/usr/bin/xdg-dbus-proxy\" -DGETTEXT_PACKAGE=\"WPE\" -DHAVE_CONFIG_H=1 -DJSC_GLIB_API_ENABLED -DLIBDIR=\"/usr/local/lib\" -DLOCALEDIR=\"/usr/local/share/locale\" -DPAS_BMALLOC=1 -DPKGLIBDIR=\"/usr/local/lib/wpe-webkit-1.1\" -DPKGLIBEXECDIR=\"/usr/local/libexec/wpe-webkit-1.1\" -DSTATICALLY_LINKED_WITH_JavaScriptCore -DSTATICALLY_LINKED_WITH_PAL -DSTATICALLY_LINKED_WITH_WTF -DSTATICALLY_LINKED_WITH_WebCore -DSTATICALLY_LINKED_WITH_bmalloc -DWEBKIT2_COMPILATION -DWebKit_EXPORTS -I/app/webkit/WebKitBuild/Release/PAL/Headers -I/app/webkit/WebKitBuild/Release/WebCore/PrivateHeaders -I/app/webkit/WebKitBuild/Release/DerivedSources/ForwardingHeaders -I/app/webkit/WebKitBuild/Release/DerivedSources/WebKit -I/app/webkit/WebKitBuild/Release/DerivedSources/WebKit/include -I/app/webkit/Source/WebKit -I/app/webkit/Source/WebKit/GPUProcess -I/app/webkit/Source/WebKit/GPUProcess/graphics -I/app/webkit/Source/WebKit/GPUProcess/graphics/WebGPU -I/app/webkit/Source/WebKit/GPUProcess/media -I/app/webkit/Source/WebKit/GPUProcess/webrtc -I/app/webkit/Source/WebKit/NetworkProcess -I/app/webkit/Source/WebKit/NetworkProcess/Classifier -I/app/webkit/Source/WebKit/NetworkProcess/Cookies -I/app/webkit/Source/WebKit/NetworkProcess/CustomProtocols -I/app/webkit/Source/WebKit/NetworkProcess/Downloads -I/app/webkit/Source/WebKit/NetworkProcess/FileAPI -I/app/webkit/Source/WebKit/NetworkProcess/IndexedDB -I/app/webkit/Source/WebKit/NetworkProcess/Notifications -I/app/webkit/Source/WebKit/NetworkProcess/PrivateClickMeasurement -I/app/webkit/Source/WebKit/NetworkProcess/ServiceWorker -I/app/webkit/Source/WebKit/NetworkProcess/SharedWorker -I/app/webkit/Source/WebKit/NetworkProcess/cache -I/app/webkit/Source/WebKit/NetworkProcess/storage -I/app/webkit/Source/WebKit/NetworkProcess/watchos -I/app/webkit/Source/WebKit/NetworkProcess/webrtc -I/app/webkit/Source/WebKit/Platform -I/app/webkit/Source/WebKit/Platform/IPC -I/app/webkit/Source/WebKit/PluginProcess -I/app/webkit/Source/WebKit/Shared -I/app/webkit/Source/WebKit/Shared/API -I/app/webkit/Source/WebKit/Shared/API/c -I/app/webkit/Source/WebKit/Shared/ApplePay -I/app/webkit/Source/WebKit/Shared/Authentication -I/app/webkit/Source/WebKit/Shared/CoreIPCSupport -I/app/webkit/Source/WebKit/Shared/Databases -I/app/webkit/Source/WebKit/Shared/Databases/IndexedDB -I/app/webkit/Source/WebKit/Shared/FileAPI -I/app/webkit/Source/WebKit/Shared/Gamepad -I/app/webkit/Source/WebKit/Shared/Notifications -I/app/webkit/Source/WebKit/Shared/Plugins -I/app/webkit/Source/WebKit/Shared/Plugins/Netscape -I/app/webkit/Source/WebKit/Shared/Plugins/Netscape/x11 -I/app/webkit/Source/WebKit/Shared/RemoteLayerTree -I/app/webkit/Source/WebKit/Shared/WebGPU -I/app/webkit/Source/WebKit/Shared/WebsiteData -I/app/webkit/Source/WebKit/Shared/XR -I/app/webkit/Source/WebKit/UIProcess -I/app/webkit/Source/WebKit/UIProcess/API -I/app/webkit/Source/WebKit/UIProcess/API/C -I/app/webkit/Source/WebKit/UIProcess/API/cpp -I/app/webkit/Source/WebKit/UIProcess/Authentication -I/app/webkit/Source/WebKit/UIProcess/Automation -I/app/webkit/Source/WebKit/UIProcess/Downloads -I/app/webkit/Source/WebKit/UIProcess/Gamepad -I/app/webkit/Source/WebKit/UIProcess/GPU -I/app/webkit/Source/WebKit/UIProcess/Inspector -I/app/webkit/Source/WebKit/UIProcess/Inspector/Agents -I/app/webkit/Source/WebKit/UIProcess/Launcher -I/app/webkit/Source/WebKit/UIProcess/Media -I/app/webkit/Source/WebKit/UIProcess/Network -I/app/webkit/Source/WebKit/UIProcess/Network/CustomProtocols -I/app/webkit/Source/WebKit/UIProcess/Notifications -I/app/webkit/Source/WebKit/UIProcess/Plugins -I/app/webkit/Source/WebKit/UIProcess/RemoteLayerTree -I/app/webkit/Source/WebKit/UIProcess/UserContent -I/app/webkit/Source/WebKit/UIProcess/WebAuthentication -I/app/webkit/Source/WebKit/UIProcess/WebAuthentication/Mock -I/app/webkit/Source/WebKit/UIProcess/WebsiteData -I/app/webkit/Source/WebKit/UIProcess/XR -I/app/webkit/Source/WebKit/WebAuthnProcess -I/app/webkit/Source/WebKit/WebProcess -I/app/webkit/Source/WebKit/WebProcess/ApplePay -I/app/webkit/Source/WebKit/WebProcess/ApplicationCache -I/app/webkit/Source/WebKit/WebProcess/Automation -I/app/webkit/Source/WebKit/WebProcess/Cache -I/app/webkit/Source/WebKit/WebProcess/Databases -I/app/webkit/Source/WebKit/WebProcess/Databases/IndexedDB -I/app/webkit/Source/WebKit/WebProcess/EncryptedMedia -I/app/webkit/Source/WebKit/WebProcess/FileAPI -I/app/webkit/Source/WebKit/WebProcess/FullScreen -I/app/webkit/Source/WebKit/WebProcess/Gamepad -I/app/webkit/Source/WebKit/WebProcess/Geolocation -I/app/webkit/Source/WebKit/WebProcess/GPU -I/app/webkit/Source/WebKit/WebProcess/GPU/graphics -I/app/webkit/Source/WebKit/WebProcess/GPU/graphics/WebGPU -I/app/webkit/Source/WebKit/WebProcess/GPU/media -I/app/webkit/Source/WebKit/WebProcess/GPU/webrtc -I/app/webkit/Source/WebKit/WebProcess/IconDatabase -I/app/webkit/Source/WebKit/WebProcess/InjectedBundle -I/app/webkit/Source/WebKit/WebProcess/InjectedBundle/API -I/app/webkit/Source/WebKit/WebProcess/InjectedBundle/API/c -I/app/webkit/Source/WebKit/WebProcess/InjectedBundle/DOM -I/app/webkit/Source/WebKit/WebProcess/Inspector -I/app/webkit/Source/WebKit/WebProcess/Launching -I/app/webkit/Source/WebKit/WebProcess/MediaCache -I/app/webkit/Source/WebKit/WebProcess/MediaStream -I/app/webkit/Source/WebKit/WebProcess/Model -I/app/webkit/Source/WebKit/WebProcess/Network -I/app/webkit/Source/WebKit/WebProcess/Network/webrtc -I/app/webkit/Source/WebKit/WebProcess/Notifications -I/app/webkit/Source/WebKit/WebProcess/OriginData -I/app/webkit/Source/WebKit/WebProcess/Plugins -I/app/webkit/Source/WebKit/WebProcess/Plugins/Netscape -I/app/webkit/Source/WebKit/WebProcess/ResourceCache -I/app/webkit/Source/WebKit/WebProcess/Speech -I/app/webkit/Source/WebKit/WebProcess/Storage -I/app/webkit/Source/WebKit/WebProcess/UserContent -I/app/webkit/Source/WebKit/WebProcess/WebCoreSupport -I/app/webkit/Source/WebKit/WebProcess/WebPage -I/app/webkit/Source/WebKit/WebProcess/WebPage/RemoteLayerTree -I/app/webkit/Source/WebKit/WebProcess/WebStorage -I/app/webkit/Source/WebKit/WebProcess/XR -I/app/webkit/Source -I/app/webkit/WebKitLibraries -I/app/webkit/WebKitBuild/Release/DerivedSources/WebKit/wpe -I/app/webkit/WebKitBuild/Release/DerivedSources/ForwardingHeaders/wpe -I/app/webkit/WebKitBuild/Release/DerivedSources/ForwardingHeaders/wpe-dom -I/app/webkit/WebKitBuild/Release/DerivedSources/ForwardingHeaders/wpe-webextension -I/app/webkit/Source/WebKit/NetworkProcess/glib -I/app/webkit/Source/WebKit/NetworkProcess/soup -I/app/webkit/Source/WebKit/Platform/IPC/glib -I/app/webkit/Source/WebKit/Platform/IPC/unix -I/app/webkit/Source/WebKit/Platform/classifier -I/app/webkit/Source/WebKit/Platform/generic -I/app/webkit/Source/WebKit/Shared/API/c/wpe -I/app/webkit/Source/WebKit/Shared/API/glib -I/app/webkit/Source/WebKit/Shared/CoordinatedGraphics -I/app/webkit/Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor -I/app/webkit/Source/WebKit/Shared/glib -I/app/webkit/Source/WebKit/Shared/libwpe -I/app/webkit/Source/WebKit/Shared/soup -I/app/webkit/Source/WebKit/UIProcess/API/C/cairo -I/app/webkit/Source/WebKit/UIProcess/API/C/glib -I/app/webkit/Source/WebKit/UIProcess/API/C/wpe -I/app/webkit/Source/WebKit/UIProcess/API/glib -I/app/webkit/Source/WebKit/UIProcess/API/wpe -I/app/webkit/Source/WebKit/UIProcess/CoordinatedGraphics -I/app/webkit/Source/WebKit/UIProcess/Inspector/glib -I/app/webkit/Source/WebKit/UIProcess/geoclue -I/app/webkit/Source/WebKit/UIProcess/gstreamer -I/app/webkit/Source/WebKit/UIProcess/linux -I/app/webkit/Source/WebKit/UIProcess/soup -I/app/webkit/Source/WebKit/UIProcess/wpe -I/app/webkit/Source/WebKit/WebProcess/InjectedBundle/API/glib -I/app/webkit/Source/WebKit/WebProcess/InjectedBundle/API/glib/DOM -I/app/webkit/Source/WebKit/WebProcess/InjectedBundle/API/wpe -I/app/webkit/Source/WebKit/WebProcess/InjectedBundle/API/wpe/DOM -I/app/webkit/Source/WebKit/WebProcess/WebCoreSupport/soup -I/app/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics -I/app/webkit/Source/WebKit/WebProcess/WebPage/libwpe -I/app/webkit/Source/WebKit/WebProcess/WebPage/wpe -I/app/webkit/Source/WebKit/WebProcess/glib -I/app/webkit/Source/WebKit/WebProcess/soup -I/app/webkit/WebKitBuild/Release -I/app/webkit/WebKitBuild/Release/JavaScriptCore/Headers -I/app/webkit/WebKitBuild/Release/JavaScriptCore/PrivateHeaders -I/app/webkit/WebKitBuild/Release/JavaScriptCoreGLib/Headers -I/app/webkit/WebKitBuild/Release/JavaScriptCoreGLib/DerivedSources -I/app/webkit/WebKitBuild/Release/WTF/Headers -I/app/webkit/WebKitBuild/Release/bmalloc/Headers -I/app/webkit/WebKitBuild/Release/ANGLE/Headers -isystem /usr/include/atk-1.0 -isystem /usr/include/gio-unix-2.0 -isystem /usr/include/glib-2.0 -isystem /usr/lib/x86_64-linux-gnu/glib-2.0/include -isystem /usr/include/libmount -isystem /usr/include/blkid -isystem /usr/include/libsoup-3.0 -isystem /usr/include/gstreamer-1.0 -isystem /usr/include/orc-0.4 -isystem /usr/include/cairo -isystem /usr/include/freetype2 -isystem /usr/include/harfbuzz -isystem /usr/include/wpe-1.0 -isystem /usr/include/at-spi2-atk/2.0 -isystem /usr/include/libxml2 -isystem /usr/include/openjpeg-2.4 -isystem /usr/include/avif -fdiagnostics-color=always -Wextra -Wall -pipe -Wno-odr -Wno-stringop-overread -Wno-stringop-overflow -Wno-nonnull -Wno-array-bounds -Wno-expansion-to-defined -Wno-noexcept-type -Wno-psabi -Wno-misleading-indentation -Wno-maybe-uninitialized -Wwrite-strings -Wundef -Wpointer-arith -Wmissing-format-attribute -Wcast-align -Wno-tautological-compare -fno-strict-aliasing -fno-exceptions -fno-rtti -O3 -DNDEBUG -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -include /app/webkit/Source/WebKit/WebKit2Prefix.h -Wno-unused-parameter -DWPE_ENABLE_XKB=1 -pthread -I/usr/include/x86_64-linux-gnu -DAVIF_DLL -std=c++20 -MD -MT Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-19.cpp.o -MF Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-19.cpp.o.d -o Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-19.cpp.o -c /app/webkit/WebKitBuild/Release/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-19.cpp In file included from /app/webkit/Source/WebKit/WebProcess/Storage/WebServiceWorkerFetchTaskClient.cpp:27, from /app/webkit/WebKitBuild/Release/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-19.cpp:2: /app/webkit/Source/WebKit/WebProcess/Storage/WebServiceWorkerFetchTaskClient.h:99:31: error: field ‘m_preloadResponse’ has incomplete type ‘WebCore::ResourceResponse’ 99 | WebCore::ResourceResponse m_preloadResponse; | ^~~~~~~~~~~~~~~~~
Attachments
Yury Semikhatsky
Comment 1 2022-06-13 16:46:29 PDT
Yury Semikhatsky
Comment 2 2022-06-13 16:48:48 PDT
EWS
Comment 3 2022-06-13 17:42:02 PDT
Committed r295508 (251513@main): <https://commits.webkit.org/251513@main> Reviewed commits have been landed. Closing PR #1486 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.