error: field ‘m_preloadResponse’ has incomplete type ‘WebCore::ResourceResponse’ https://bugs.webkit.org/show_bug.cgi?id=241579

Reviewed by Michael Catanzaro.

Fix WPE compilation.

* Source/WebKit/WebProcess/Storage/WebServiceWorkerFetchTaskClient.h: include missing header.

Canonical link: https://commits.webkit.org/251513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295508 268f45cc-cd09-0410-ab3c-d52691b4dbfc